--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author :
   site: https://bledeamarius.github.io
   description : I&#39;m a web master interested in communication applied to web marketing.
   image : social-image.png
-  # email : lantoniotrento@gmail.com
+  email : iuliu_ivanciuc@yahoo.com
   # github : antoniotrento
   # twitter : lantoniotrento
   # facebook: lantoniotrento
