--- a/_config.yml
+++ b/_config.yml
@@ -14,28 +14,27 @@ excerpt_separator: "<!--more-->"
 #
 
 #Google Ad Words Data from scripts code (using Google responsive options) and ad client
-data-ad-slot: 
-data-ad-client: 
-google_ad_client: 
+data-ad-slot:
+data-ad-client:
+google_ad_client:
 
 post_limit: 5
 
-
-title : Topograf
+title: Topograf
 tagline: Bootstrap 4 UI kit for jekyll
-author : 
-  name : Marius Bledea
-  site: https://bledeamarius.github.io
-  description : I&#39;m a web master interested in communication applied to web marketing.
-  image : social-image.png
-  email : iuliu_ivanciuc@yahoo.com
+author:
+  name: Marius Bledea
+  site: https://bledeamarius.github.io/presentation-website
+  description: I&#39;m a web master interested in communication applied to web marketing.
+  image: social-image.png
+  email: iuliu_ivanciuc@yahoo.com
   # github : antoniotrento
   # twitter : lantoniotrento
   # facebook: lantoniotrento
   # linkedin: antoniotrento
   # instagram: lantoniotrento
   # pinterest: antoniotrento
-  # feedburner : 
+  # feedburner :
 
 # twitter_username: lantoniotrento
 # The production_url is only used when full-domain names are needed
@@ -46,12 +45,12 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://bledeamarius.github.io/presentation-website
+production_url: https://bledeamarius.github.io/presentation-website
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
-JB :
-  version : 0.3.0
+JB:
+  version: 0.3.0
 
   # All links will be namespaced by BASE_PATH if defined.
   # Links in your website should always be prefixed with {{BASE_PATH}}
@@ -75,7 +74,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : https://bledeamarius.github.io/presentation-website
+  BASE_PATH: https://bledeamarius.github.io/presentation-website
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
@@ -85,31 +84,31 @@ JB :
   #   http://s3.amazonaws.com/yoursite/themes/watermelon
   #   /assets
   #
-  ASSET_PATH : https://bledeamarius.github.io/presentation-website/assets/themes/bootstrap
+  # ASSET_PATH : https://bledeamarius.github.io/presentation-website/assets/themes/bootstrap
 
   # These paths are to the main pages Jekyll-Bootstrap ships with.
   # Some JB helpers refer to these paths; change them here if needed.
   #
   archive_path: /archive.html
-  categories_path : /categories.html
-  tags_path : /tags.html
-  atom_path : /atom.xml
-  rss_path : /rss.xml
+  categories_path: /categories.html
+  tags_path: /tags.html
+  atom_path: /atom.xml
+  rss_path: /rss.xml
 
   # Settings for comments helper
   # Set 'provider' to the comment provider you want to use.
   # Set 'provider' to false to turn commenting off globally.
   #
-  comments :
-    provider : disqus
-    disqus : 
-      short_name : jeky-new-age
-    #livefyre :
-    #  site_id : 
-    #intensedebate :
-    #  account : 
-    #facebook :
-    #  appid :
+  comments:
+    provider: disqus
+    disqus:
+      short_name: jeky-new-age
+      #livefyre :
+      #  site_id :
+      #intensedebate :
+      #  account :
+      #facebook :
+      #  appid :
       num_posts: 5
       width: 580
       colorscheme: light
@@ -118,25 +117,25 @@ JB :
   # Set 'provider' to the analytics provider you want to use.
   # Set 'provider' to false to turn analytics off globally.
   #
-  analytics :
-    provider : google
-    google :
-        tracking_id : 
-    getclicky :
-      site_id :
-    mixpanel :
-        token : 
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+  analytics:
+    provider: google
+    google:
+      tracking_id:
+    getclicky:
+      site_id:
+    mixpanel:
+      token:
+    piwik:
+      baseURL: "myserver.tld/piwik" # Piwik installation address (without protocol)
+      idsite: "1" # the id of the site on Piwik
 
   # Settings for sharing helper.
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
   # Set 'provider' to the sharing provider you want to use.
   # Set 'provider' to false to turn sharing off globally.
   #
-  sharing :
-    provider : false
+  sharing:
+    provider: false
 
   # Settings for all other include helpers can be defined by creating
   # a hash with key named for the given helper. ex:
