--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ post_limit: 5
 title: Topograf
 tagline: Bootstrap 4 UI kit for jekyll
 author:
-  name: Marius Bledea
+  name: Iuliu Ivanciuc
   site: https://bledeamarius.github.io/presentation-website
   description: I&#39;m a web master interested in communication applied to web marketing.
   image: social-image.png
